Player Movement and submission video and build

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     
     <canvas id="bg"></canvas>
 
+    <header>
+      <div class="center fadeInLeft"> 
+        <img src="LogoD.png" alt="Logo" style="width:3em;height:3em;">
+        Ben Chaves - Artist 
+      </div>
+      <div class="center  fadeInUp"> contactInfo </div>
+      <div class="center  fadeInRight"> navBar </div>
+    </header>
+
     <main>
-
-      Testing 0.0.6
-      
       <section>
-        :3
-      </section>
 
+      </section>
     </main>
 
     <script type="module" src="/main.js"></script>
