--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="center fadeInLeft"> 
         <img src="LogoD.png" alt="Logo" style="width:3em;height:3em;">
-        Ben Chaves - Artist 
+        Ben Chaves - Technical Artist
       </div>
       <div class="center  fadeInUp"> contactInfo </div>
       <div class="center  fadeInRight"> navBar </div>
